Test/git-issues/git-issue-750.dfy.expect
git-issue-750.dfy(8,4): Error: RHS (of type array<nat>) not assignable to LHS (of type array<int>) (nonvariance for type parameter expects nat <: int)
git-issue-750.dfy(9,4): Error: RHS (of type array<int>) not assignable to LHS (of type array<nat>) (nonvariance for type parameter expects int <: nat)
git-issue-750.dfy(10,4): Error: incorrect type of method in-parameter 0 (expected array<nat>, got array<int>) (nonvariance for type parameter expects int <: nat)
git-issue-750.dfy(10,4): Error: incorrect type of method in-parameter 1 (expected array<int>, got array<nat>) (nonvariance for type parameter expects nat <: int)
4 resolution/type errors detected in git-issue-750.dfy
